--- a/templates/base.html
+++ b/templates/base.html
@@ -80,6 +80,7 @@
               {{ feature_nav_link('AOI Integrated Report', url_for('main.integrated_report'), 'reports_integrated') }}
               {{ feature_nav_link('Operator Report', url_for('main.operator_report'), 'reports_operator') }}
               {{ feature_nav_link('Line Report', url_for('main.line_report'), 'reports_line') }}
+              {{ feature_nav_link('Part Report', url_for('main.part_report'), 'reports_part') }}
               {{ feature_nav_link('AOI Daily Report', url_for('main.aoi_daily_report_page'), 'reports_aoi_daily') }}
             </div>
           </li>
